--- a/css/main.css
+++ b/css/main.css
@@ -1369,12 +1369,24 @@
 
 .filter {
   margin-bottom: 50px;
+  flex-wrap: wrap;
 }
 .filter__item:not(:last-child) {
   margin-right: 8px;
 }
 .filter__item {
   display: block;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    flex-wrap: nowrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter {
+    flex-wrap: nowrap;
+  }
 }
 
 .filter__button {
@@ -1405,11 +1417,40 @@
 .apps {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .apps {
+    gap: 30px;
+  }
 }
 .apps__element {
-  margin-right: 30px;
+  margin-right: 0;
   margin-bottom: 30px;
-  width: 370px;
+}
+@media screen and (min-width: 768px) {
+  .apps__element {
+    width: 354px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .apps__element:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .apps__element:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .apps__element {
+    width: 370px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .apps__element:nth-child(odd) {
+    margin-right: 0;
+  }
 }
 .apps__image {
   position: relative;
@@ -1417,6 +1458,22 @@
 }
 .apps__block {
   display: block;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .apps__block {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .apps__block {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .apps__block {
+    width: 370px;
+  }
 }
 .apps__deskr {
   border-bottom: 1px solid rgb(238, 238, 238);
@@ -1434,6 +1491,16 @@
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
   transition-property: opacity, transform;
+}
+@media screen and (min-width: 768px) {
+  .apps__overlay {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .apps__overlay {
+    width: 370px;
+  }
 }
 .apps__overlay > p {
   margin: 0;
@@ -1454,14 +1521,6 @@
 }
 .shadow:hover, .shadow:focus {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.apps__element:nth-child(3n) {
-  margin-right: 0;
-}
-
-.apps__element:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }
 
 .apps__member {
