--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -33,9 +33,14 @@
   }
 }
 
-.address__contact, .address__map, .shadow, .apps__overlay, .filter__button, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey {
+.address__contact, .address__map, .shadow, .apps__overlay, .filter__button, .contacts__link--hover, .nav__link, .actions__network--white, .actions__icon--white, .actions__network--grey, .mobile-contacts-link, .mobile-menu-link, .menu-cls-btn {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-link, .mobile-contacts-link, .mobile-menu-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 .page {
@@ -113,6 +118,141 @@
 
 .for-logotype {
   width: 145px;
+}
+
+.menu {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+}
+.menu .link {
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover .menu-cls-btn,
+.menu-toggle:focus .menu-cls-btn {
+  fill: #2196f3;
+  outline: none;
+}
+
+.menu-cls-btn {
+  height: 40px;
+  width: 40px;
+  fill: #212121;
+  transition-property: fill;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu {
+  margin-bottom: auto;
+}
+
+.mobile-menu-item {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-link {
+  font-size: 40px;
+  color: #212121;
+  line-height: 1.18;
+  transition-property: color;
+}
+
+.mobile-menu-link.current {
+  color: #2196f3;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts-link {
+  font-size: 24px;
+  line-height: 1.17;
+  color: #757575;
+  transition-property: color;
+}
+
+.mobile-contacts-link.current {
+  color: #2196f3;
+  font-size: 34px;
+}
+
+.mobile-social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-social-link {
+  padding-right: 10px;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196F3;
+}
+
+.mobile-social {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
 }
 
 .section {
@@ -517,12 +657,24 @@
 
 .filter {
   margin-bottom: 50px;
+  flex-wrap: wrap;
 }
 .filter__item:not(:last-child) {
   margin-right: 8px;
 }
 .filter__item {
   display: block;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    flex-wrap: nowrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter {
+    flex-wrap: nowrap;
+  }
 }
 
 .filter__button {
@@ -553,11 +705,40 @@
 .apps {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .apps {
+    gap: 30px;
+  }
 }
 .apps__element {
-  margin-right: 30px;
+  margin-right: 0;
   margin-bottom: 30px;
-  width: 370px;
+}
+@media screen and (min-width: 768px) {
+  .apps__element {
+    width: 354px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .apps__element:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .apps__element:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .apps__element {
+    width: 370px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .apps__element:nth-child(odd) {
+    margin-right: 0;
+  }
 }
 .apps__image {
   position: relative;
@@ -565,6 +746,22 @@
 }
 .apps__block {
   display: block;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .apps__block {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .apps__block {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .apps__block {
+    width: 370px;
+  }
 }
 .apps__deskr {
   border-bottom: 1px solid rgb(238, 238, 238);
@@ -582,6 +779,16 @@
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
   transition-property: opacity, transform;
+}
+@media screen and (min-width: 768px) {
+  .apps__overlay {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .apps__overlay {
+    width: 370px;
+  }
 }
 .apps__overlay > p {
   margin: 0;
@@ -602,14 +809,6 @@
 }
 .shadow:hover, .shadow:focus {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.apps__element:nth-child(3n) {
-  margin-right: 0;
-}
-
-.apps__element:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }
 
 .apps__member {
