--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -5,6 +5,7 @@
 .filter {
   @extend %flexbox;
   margin-bottom: 50px;
+  flex-wrap: wrap;
 
   &__item:not(:last-child) {
     margin-right: 8px;
@@ -12,7 +13,16 @@
 
   &__item {
     display: block;
+    margin-bottom: 8px;
   }  
+
+  @media screen and (min-width: $tablet) {
+    flex-wrap: nowrap;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-wrap: nowrap;
+  }
 }
 
 .filter__button {
@@ -45,11 +55,42 @@
 .apps {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: $desktop) {
+    gap: 30px;
+  }
 
   &__element {
-    margin-right: 30px;
+    margin-right: 0;
     margin-bottom: 30px;
-    width: 370px;
+    
+
+    @media screen and (min-width: $tablet) {
+      width: 354px;
+      display: flex;
+      flex-wrap: wrap;
+
+      &:nth-child(odd) {
+        margin-right: 30px;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    
+    @media screen and (min-width: $desktop) {
+      width: 370px;
+      margin-right: 0;
+      margin-left: 0;
+
+      &:nth-child(odd) {
+        margin-right: 0;
+      }
+
+    }
   }
 
   &__image {
@@ -59,6 +100,19 @@
 
   &__block {
     display: block;
+    width: 100%;
+
+  @media screen and (min-width: $mobile) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 370px;
+  }
   }
 
   &__deskr {
@@ -79,6 +133,14 @@
   opacity: 0;
   transition-property: opacity, transform;
   @extend %cubic-bezier;
+
+  @media screen and (min-width: $tablet) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 370px;
+  }
 
   & > p {
     margin: 0;
@@ -105,14 +167,6 @@
   &:focus {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
-}
-
-.apps__element:nth-child(3n) {
-  margin-right: 0;
-}
-
-.apps__element:nth-last-child(-n + 3) {
-  margin-bottom: 0;
 }
 
 .apps__member {
