--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,9 +1,11 @@
 @import "./base/reset";
 @import "./utils/vars";
+@import "./utils/mixins";
 @import "./utils/placeholder";
 @import "./base/common";
 @import "./components/button";
 @import "./components/logo";
+@import "./components/mobile-menu-port";
 @import "./components/section-styles";
 @import "./components/social-icon";
 @import "./components/textstyle";
